- this is the version corrected by JCS and handed in to Frau Wolf
git-svn-id: http://code.ana.unibe.ch/svn/ProgressReport2009@10 0c1e4840-3ef3-4fc2-8e6d-3da5d23d04b9

--- a/img/ROI-1324-0266-0289.tex
+++ b/img/ROI-1324-0266-0289.tex
@@ -15,7 +15,7 @@ width=\imsize,
 grid=both,
 xmin=0, xmax=65,
 ymin=1, ymax=1e+007,
-xlabel={Thickness [$\micro$m]},
+xlabel={Diameter [$\micro$m]},
 ylabel={Pixel Count},
 legend entries={%
     B ROI 3,%
