--- a/ProgresssReport2009.tex
+++ b/ProgresssReport2009.tex
@@ -25,13 +25,14 @@
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usepackage{booktabs}
+\usepackage[version=3]{mhchem}
 \usepackage[numbers,square,sort&compress]{natbib}
 \ifhtml
 	\usepackage[disable]{todonotes}
 \else
 	\usepackage{todonotes}
-	\usepackage{lineno}\linenumbers\modulolinenumbers[2]
-	\usepackage{setspace,savetrees}\doublespacing%\onehalfspacing
+	%\usepackage{lineno}\linenumbers\modulolinenumbers[2]
+	%\usepackage{setspace,savetrees}\doublespacing%\onehalfspacing
 	\usepackage{hyperref}
 		\hypersetup{%
 			pdfauthor={David Haberth\"{u}r},%
@@ -52,9 +53,9 @@
 \svnid{$Id$} 
 
 \pagestyle{fancy}
-\fancyfoot{}
-\fancyfoot[OR]{\tiny \href{\svnkw{HeadURL}}{Revision \svnkw{LastChangedRevision}} --- last commit on \svnkw{LastChangedDate} --- page \thepage}
-\fancyfoot[EL]{\tiny page \thepage\ --- \href{\svnkw{HeadURL}}{Revision \svnkw{LastChangedRevision}} --- last commit on \svnkw{LastChangedDate}}
+%\fancyfoot{}
+%\fancyfoot[OR]{\tiny \href{\svnkw{HeadURL}}{Revision \svnkw{LastChangedRevision}} --- last commit on \svnkw{LastChangedDate} --- page \thepage}
+%\fancyfoot[EL]{\tiny page \thepage\ --- \href{\svnkw{HeadURL}}{Revision \svnkw{LastChangedRevision}} --- last commit on \svnkw{LastChangedDate}}
 
 \newcommand{\imsize}{\linewidth}
 
@@ -62,21 +63,21 @@
 \newlength\imagescale
 
 \title{Progress Report for the Graduate School in Cellular and Biomedical Sciences - 2009}
-\ifhtml
-\else
-	\subtitle{(SVN-revision: \svnkw{LastChangedRevision}, compiled \today, \thistime)}
-\fi
+%\ifhtml
+%\else
+%	\subtitle{(SVN-revision: \svnkw{LastChangedRevision}, compiled \today, \thistime)}
+%\fi
 \author{David Haberth\"{u}r}
-\date{\today}
+\date{January 4, 2010}
 
 \begin{document}
 \maketitle
 
 \section{Introduction}
-Again, this year the focus of my work was on three-dimensional datasets obtained with high resolution synchrotron radiation based x-ray tomographic microscopy (SRXTM) at the beam line for TOmographic Microscopy and Coherent rAdiology experimenTs (TOMCAT) at the Swiss Light Source (SLS), Paul Scherrer Institute in Villigen, Switzerland. During several beam time shifts we recorded datasets of rat and mice lung samples with different characteristics. In the past year I gave multiple talks at both national and international conferences and have presented several posters on the topics I have been working on, have prepared one manuscript as a first author and coauthored one publication (details are listed in the Word document ProgressReport2009.doc).
+Again, this year the focus of my work was on three-dimensional datasets obtained with high resolution synchrotron radiation based x-ray tomographic microscopy (SRXTM) at the beam line for TOmographic Microscopy and Coherent rAdiology experimenTs (TOMCAT) at the Swiss Light Source (SLS), Paul Scherrer Institute in Villigen, Switzerland. During several beam time shifts we recorded datasets of rat and mice lung samples with different characteristics. In the past year I gave multiple talks at both national and international conferences and have presented several posters on the topics I have been working on, have prepared one manuscript as a first author and coauthored one publication (details are listed in Table 5 of the ``Ph.D.\ Programme: Progress Report'').
 
 \section{SRXTM}\label{sec:srxtm}
-During 6 allotted beam times tomographic datasets of 170 samples have been obtained, an increased output compared to the output presented in the last progress report. In total our group performed 248 single scans; the difference between amount of tomographic datasets and single scans again arises through the use of the so called wide field scanning (see section~\ref{sec:wfs}), where multiple single scans are merged to obtain tomographic datasets with increased field of view at the same pixel-resolution as the single scans.
+During 6 beam times tomographic datasets of 170 samples have been obtained, an increased output compared to the output presented in the last progress report. In total our group performed 248 single scans; the difference between amount of tomographic datasets and single scans again arises through the use of the so called wide field scanning (see section~\ref{sec:wfs}), where multiple single scans are merged to obtain tomographic datasets with increased field of view at the same pixel-resolution as the single scans.
 
 Apart from 4 scans for calibrating the tomographic beam line with electron microscopy grids or needle pins, all tomographic datasets scanned have been of rat and mice lung samples. Slightly less than half of the tomographic scans (%
 % 15 Mariani
@@ -86,8 +87,8 @@ Apart from 4 scans for calibrating the tomographic beam line with electron micro
 76) have been scanned as part of four ongoing collaborations with external partners. The collaborating groups are:
 \begin{description}
 \item[The Lung Biology Center, Harvard Medical School, USA] In the ongoing collaboration with Thomas Mariani we scanned 15 samples of PPAR Knockout mice. The tomographic datasets are used to study the alterations of the airway diameter in these mice. A paper of the findings is in preparation.
-\item[GSF-Institute of Inhalation Biology, Munich, Germany] We scanned twelve rat lung samples where the rats have inhaled gold particles (\SI{200}{\nano\meter} and \SI{700}{\nano\meter}). These tomographic datasets are used for a study on a bronchopulmonary disease model in preparation for an application to the NFP 64 «Chancen und Risiken von Nanomaterialien». Generally, we use absorption-contrast tomography, but for these samples we also started to use phase-contrast tomography. This enables us to use unstained lung samples, allowing for immunostaining and other biologically active test after tomographic image acquisition, something which is not possible with the uranyl-acetate-stained lungs samples used for absorption-contrast tomography.
-\item[Medicine, Nursing and Health Sciences, Monash University, Australia] For a study to investigate the effects of different activated Protein C isoforms and hyperoxia exposure on the pulmonary vasculature and capillary density of rat lungs we scanned 36 samples. 
+\item[GSF-Institute of Inhalation Biology, Munich, Germany] We scanned 12 rat lung samples where gold particles (\SI{200}{\nano\meter} and \SI{700}{\nano\meter}) were applied by tracheal instillation. These tomographic datasets represent pilot experiments in preparation for an application to the NFP 64 «Chancen und Risiken von Nanomaterialien». Generally, we use absorption-contrast tomography, but for these samples we also started to use phase-contrast tomography. This enables us to use unstained lung samples, allowing for immunostaining and other biologically active test after tomographic image acquisition, something which is not possible with the uranyl-acetate-stained lungs samples used for absorption-contrast tomography.
+\item[Medicine, Nursing and Health Sciences, Monash University, Australia] For a study to investigate the protective effects of activated Protein C on a lung injury during hyperoxia (\SI{80}{\percent} \cf{O2}) we scanned 36 rat lung samples. 
 \item[Lehrstuhl für Numerische Mechanik, TU Munich, Germany] We scanned 13 rat lung samples for a study on the mechanics of alveolar tissue under breathing and motion stress.
 \end{description}
 
@@ -115,10 +116,10 @@ Apart from 4 scans for calibrating the tomographic beam line with electron micro
 \section{Wide field scanning}\label{sec:wfs}
 The method for increasing the field of view of the TOMCAT beam line first presented in my last progress report has been routinely applied for the imaging of more than 30 rat lung samples by our group. The method is still pending the full implementation into the beam line work flow at the SLS as a module for other groups to use.
 
-A manuscript for submission to the \href{http://journals.iucr.org/s/}{Journal of Synchrotron Radiation}, which explains the concepts and implementation of the so-called wide field x-ray tomographic microscopy (WF-SRXTM) at the TOMCAT beamline is in the last editing steps and should be ready for submission in January 2010\todo{really?}. The technical side of the wide field scanning method has been covered, future work will focus on the answering of biological questions using this method. Using tomographic datasets obtained with WF-SRXTM we can now visualize entire rat lung acini\footnote{The acinus is defined as the complex of alveolated airways distal to the terminal bronchiole \cite{Rodriguez1987}, in which the gas-exchange in the lung takes place.}, something which was not generally possible using the classic tomographic acquisition method at TOMCAT, as can be seen in figure~\ref{fig:wfs-overview}.
+A manuscript for submission to the \ifhtml Journal of Synchrotron Radiation\else\href{http://journals.iucr.org/s/}{Journal of Synchrotron Radiation}\fi, which explains the concepts and implementation of the so-called wide field x-ray tomographic microscopy (WF-SRXTM) at the TOMCAT beamline is in the last editing steps and should be ready for submission in January 2010 (attached to this progress report). The technical side of the wide field scanning method has been covered, future work will focus on the answering of biological questions using this method. Using tomographic datasets obtained with WF-SRXTM we can now visualize entire rat lung acini\footnote{The acinus is defined as the complex of alveolated airways distal to the terminal bronchiole \cite{Rodriguez1987}, in which the gas-exchange in the lung takes place.}, something which was not generally possible using the classic tomographic acquisition method at TOMCAT, as can be seen in figure~\ref{fig:wfs-overview}.
 
 \renewcommand{\imsize}{0.5\linewidth}
-\begin{figure}[htp]
+\begin{figure}[ht]
 	\centering
 	\subfloat[Conventional SRXTM]{%
 		\ifhtml
@@ -160,10 +161,10 @@ I have developed a range of scanning protocols for the end-user to choose from. 
 
 Even with a reduction of the total scanning time by \SI{84}{\percent}, no discernible structural alterations are introduced in the tomographic dataset. To show this, four regions of interest with a side length of 256 pixels (at \SI{1.48}{\micro\meter\per pixel}) have been extracted for three of the 19 protocols, once for the gold-standard protocol (B, total scanning time \SI{87}{\minute}), once for a medium (L, \SI{43}{\min}) and once for a very fast protocol (T, \SI{12}{\min}). The three-dimensional placement of these ROIs inside the sample is shown in figure~\ref{fig:roi3d}. Each of the ROIs has been binarized using an algorithmically determined threshold~\cite{Otsu1979} and small particles inside the segmented airspace lumen have been removed using a connected component labeling. Subsequently, the euclidean distance transformation has been calculated and plotted for each thresholded ROI and each of the three protocols (shown in figure	\ref{fig:DTFplots}).
 
-The distance transformation encodes the distance to the airway wall for of each pixel inside the airway lumen and is a measure of the airway diameter. Since every pixel inside the lumen is accounted for, I chose to show the distance transformations with a logarithmic scale for the pixel count, or else the differences would not be visible.
+The distance transformation encodes the distance to the airway wall for each pixel inside the airway lumen and is a measure of the airway diameter. Since every pixel inside the lumen is accounted for, I chose to show the distance transformations with a logarithmic scale for the pixel count, or otherwise the differences would not be visible.
 
 \renewcommand{\imsize}{\columnwidth}
-\begin{figure}[htp]
+\begin{figure}[ht]
 	\centering
 	\ifhtml
 	\else
@@ -187,7 +188,7 @@ The distance transformation encodes the distance to the airway wall for of each 
 \end{figure}
 
 \renewcommand{\imsize}{0.5\linewidth}
-\begin{figure}[htp]
+\begin{figure}[ht]
 	\centering
 	\ifhtml
 	\else
@@ -200,9 +201,9 @@ The distance transformation encodes the distance to the airway wall for of each 
 	\label{fig:DTFplots}
 \end{figure}
 
-Only very minor differences in the airway diameter are introduced through the reduction of the scanning time (again, note the logarithmic axis for the voxel count), and those differences are only visible in the lateral parts of the sample, where---for the fastest protocols--the sampling theorem is far from being satisfied (ROI 1 and 4). Further details on this analysis are in the manuscript on the wide field SRXTM~\cite{Haberthuer2010}\todo{attached to this report}.
+Only very minor differences in the airway diameter are introduced through the reduction of the scanning time (again, note the logarithmic axis for the voxel count), and those differences are only visible in the lateral parts of the sample, where---for the fastest protocols--the sampling theorem is far from being satisfied (ROI 1 and 4). Further details on this analysis can be found in the manuscript on the wide field SRXTM~\cite{Haberthuer2010}, which is attached to this progress report.
 
-One result found with the visualization of rat lung acini over the postnatal lung development (day 4, 10, 21, 36 and 60 after birth) is that the acini seem to grow to a greater extent than predicted. Even if we have increased the visible sample volume nine-fold, we are still not able to enclose and fully visualize an entire rat lung acinus for postnatal days 36 and 60. For these days, tomographic datasets only contain partial acini, even with a three-fold increase in lateral field of view. Recently, we thus recorded stacked WF-SRXTM scans, which increase the field of view both horizontally and vertically and plan to use these datasets for the study of the postnatal development of the acinar size.
+One result found with the visualization of rat lung acini over the postnatal lung development (day 4, 10, 21, 36 and 60 after birth) is that the acini seem to grow to a greater extent than expected. Even if we have increased the visible sample volume nine-fold, we are still not able to enclose and fully visualize an entire rat lung acinus for postnatal days 36 and 60. For these days, tomographic datasets only contain partial acini, even with a three-fold increase in lateral field of view. Recently, we thus recorded stacked WF-SRXTM scans, which increase the field of view both horizontally and vertically and plan to use these datasets for the study of the postnatal development of the acinar size.
 
 \section{Multimodal Imaging}
 The manuscript attached to the last progress report has been published in the Journal of Physics~\cite{Haberthuer2009}. The initial work flow for multimodal imaging---the combination of the full, unconstricted three-dimensional information of SRXTM datasets with the ultrahigh resolution of transmission electron microscopy (TEM) images---has been refined by a master student in our group during a six-month master thesis. We are now able to routinely register datasets from two different imaging modalities. Two-dimensional ultrahigh resolution TEM slices without three-dimensional location information can now be matched with three-dimensional high-resolution SRXTM slices containing the unrestricted information on the exact location in the lung sample. This enables us to exactly study and visualize particle deposition both on a cellular level (e.g.\, uptake into epithelial cells) and on the airway tree level (e.g.~particle deposition locations in the airway tree).
@@ -213,7 +214,7 @@ Multiple acinar airway skeletons have been generated from tomographic dataset as
 Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lung sample obtained at postnatal day 21 containing multiple airway segments containing one or more acini (both shown in the background). The foreground of the image shows the extracted skeletons containing between \num{1100} and \num{7300} nodes.
 
 \renewcommand{\imsize}{\linewidth}
-\begin{figure}[htp]
+\begin{figure}[ht]
 	\centering
 	\ifhtml
 	\else
@@ -235,14 +236,14 @@ Figure~\ref{fig:skeleton} shows a skeletonization of multiple acini in a rat lun
 	\label{fig:skeleton}
 \end{figure}
 
-This big amount of skeleton points makes a manual method for correction no longer feasible. Current work on the extraction of structural information now focuses on the reproducibility of the skeleton extraction algorithm. We plan to conduct a morphological counting study for assessing the biological correctness of the computationally derived skeleton. Additionally, we started a collaboration with Fraunhofer MeVis\footnote{Which provide the visualization software MeVisLab, used for calculating the airway skeletons} to adapt the skeletonization algorithm to segmentations obtained from our samples.
+This big amount of skeleton points makes a manual method for correction no longer feasible. Current work on the extraction of structural information now focuses on the reproducibility of the skeleton extraction algorithm. We plan to conduct a morphological counting study for assessing the biological correctness of the computationally derived skeleton. Additionally, we started a collaboration with Fraunhofer MeVis\footnote{Which provide the visualization software MeVisLab, used for calculating the airway skeletons.} to adapt the skeletonization algorithm to segmentations obtained from our samples.
 
 \section{Publications}\label{sec:publications}
 \subsection{Publication on the enhancement of the field of view of TOMCAT}
 The planned publication on the enhancement of the field of view of TOMCAT has been delayed because of several problems. After a first version of the manuscript has been delayed because of multiple conferences and been set aside, a second version has been prepared for discussion with the coauthors. During this discussion we agreed on a slightly changed direction of the paper, which required waiting for new data from one of the coauthors. After two months we concluded that with current methods it not possible to generate the new data in the way we planned. We now use the distance transformation mentioned in section~\ref{sec:wfs} for confirmation and the manuscript~\cite{Haberthuer2010} is in the final editing stages and should be submitted shortly.
 
 \subsection{Publication on bone scans performed last year}
-Last year we made several tomographic scans of mice bones (tibia, femur and vertebrae) as part of a collaborative study. The manuscript which resulted from this collaboration has been submitted to Nature Medicine, details should be found soon in citation~\cite{Sausbier2009b}.
+Last year we made several tomographic scans of mice bones (tibia, femur and vertebrae) as part of a collaborative study. The manuscript which resulted from this collaboration has been submitted to Nature Medicine~\cite{Sausbier2009b}.
 
 \bibliographystyle{unsrtnat}
 \bibliography{../../references}
